[package]
name        = "ist-probe"
version     = "2.0.0"
edition     = "2021"
description = "High-performance network probe service for Internet Stability Tracker"

[[bin]]
name = "ist-probe"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio        = { version = "1",    features = ["full"] }
# HTTP framework
axum         = { version = "0.7",  features = ["json"] }
tower        = "0.4"
tower-http   = { version = "0.5",  features = ["cors", "trace"] }
# Serialization
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
# HTTP client (bandwidth probe + TLS probe + DNS timing)
reqwest      = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }
# Async utilities
futures      = "0.3"
# Structured logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Error handling
anyhow       = "1"
thiserror    = "1"
# DNS resolution (system resolver for hostname → IP)
dns-lookup   = "2"

[build-dependencies]
# Compiles the C timing library and links it into the Rust binary
cc = "1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
